# ramalama-stack-mcp

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml  test-container.yml  test-external-providers.yml  test-lls-integration.yml
cookbook/: rag_agent.py
src/ramalama_stack/: rag.py  ramalama-run.yaml  ramalama_adapter.py
test_mcp/: instructions.txt  model.txt  prompts.txt  robot_mcp.py  run.yaml  server_prepare_ramalamastack.sh  server_run_llama-stack.sh  server_run_mcp.sh  server_run_model.sh  test-local-mcp.py  test-remote-mcp.py
tests/: mcp-test-server.py  test-local-mcp.py  test-rag-agent.py  test-rag-agent.sh  test-tools.py
